add bio to bioinformatics

--- a/bioinformatics/index.html
+++ b/bioinformatics/index.html
@@ -9,7 +9,21 @@ title: Bioinformatics Support
   <div class="panel-panel middle-panel">
     <div>
       <div class="content-area">
-        <div class="panel-pane first">
+
+        <div id="sidebar-right" class="panel-panel panel-col-last">
+          <div class="inside">
+            <div class="panel-pane  libguides-profile first last no-separator">
+              <div class="block-inner">
+                <div class="content">
+                  <div id="api_profile_uid77392_iid1584">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="panel-pane first full-width-minus-one-sidebar">
           <div class="block-inner">
             <div class="content">
 
@@ -97,3 +111,5 @@ title: Bioinformatics Support
    </div>
  </div>
 </div>
+
+<script src="//api.libguides.com/api_profile.php?iid=1584&uid=77392&context=object&format=js"></script>
